# olivetti-multisumma-20

./: .gitignore  README.md  button_layout.json  db.sqlite  main.py  mta.yaml  package-lock.json  package.json  pyproject.toml  server.js  xs-security.json
.claude/: launch.json  settings.local.json
app/: package-lock.json  package.json  xs-app.json
app/resources/: api.js  calculator.js  config.html  effects.js  style.css
db/: schema.cds
srv/: calculator-service.cds  calculator-service.js
static/: api.js  config.html  index.html  sound.js
test/: api.http  test_api.py
